# algos-testing-framework

./: .gitignore  CMakeLists.txt
algorithms/classic/: Sort.cpp  Sort.hpp  Sort.json
itf/: Algorithm.hpp  Registry.hpp
scripts/: algo
src/: framework.cpp  framework.hpp  main.cpp
validation/: isSorted.hpp
